--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Onyinye Lorine Okafor</a>.
+    Coded by <a href="https://github.com/Lorine28/3-column-preview-card-component">Onyinye Lorine Okafor</a>.
   </div>
 
 </body>
