--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-  <div class="container"> 
+  <main class="container"> 
 
     <div class="sedan">
     <img src="/images/icon-sedans.svg" alt="">
@@ -45,12 +45,12 @@
  <button> Learn More </button> 
 </div>
 
-  </div>
+  </main>
 
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/Lorine28/3-column-preview-card-component">Onyinye Lorine Okafor</a>.
-  </div>
+  </footer>
 
 </body>
 </html>
